[package]
name = "prism_gov"
version = "0.1.0"
edition = "2021"
description = ""
license = ""
repository = "https://github.com/prism-finance/hub-contracts"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cosmwasm-schema = { version = "1.0" }
cw-utils = "0.13"
cosmwasm-std = { version = "1.0", features = ["stargate"] }
cw-storage-plus = "0.13"
cw-controllers = "0.13"
schemars = "0.8.1"
semver = "1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
basset = { path = "../../packages/prism-protocol", default-features = false, version = "0.1.0"}
